# tree-sitter-rune

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rune/: __init__.py
bindings/rust/: lib.rs
examples/: maths.ru  struct.ru
queries/: highlights.scm
queries/rune/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
